[package]
name = "pl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0.192", features = ["serde_derive"] }
serde_yaml = "0.9.27"
